--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,12 +20,24 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
+- task: ArchiveFiles@2
+  displayName: 'Archive files'
+  inputs:
+    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+    includeRootFolder: false
+    archiveType: zip
+    archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+    replaceExistingArchive: true
+
+- upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+  artifact: drop
+
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Pay-As-You-Go(1ce78759-24c6-47f3-b11e-f1ea12273337)'
     appType: 'webAppLinux'
     WebAppName: 'NuxtCMSClient'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
     RuntimeStack: 'NODE|14-lts'
     StartupCommand: 'npm run start'
