--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,43 +1,83 @@
-# Node.js with Vue
-# Build a Node.js project that uses Vue.
+# Node.js Express Web App to Linux on Azure
+# Build a Node.js Express app and deploy it to Azure as a Linux web app.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
 - master
 
-pool:
-  vmImage: ubuntu-latest
+variables:
+  # Enable debug mode
+  System.Debug: true
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '14.x'
-  displayName: 'Install Node.js'
+  #Check for main branch deployment
+  isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+  # Azure Resource Manager connection created during pipeline creation
+  azureSubscription: '6bcbce78-67e4-41e1-a06d-f16c874d25a9'
 
-- task: ArchiveFiles@2
-  displayName: 'Archive files'
-  inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    includeRootFolder: false
-    archiveType: zip
-    archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-    replaceExistingArchive: true
+  # Web app name
+  webAppName: 'NuxtCMSClient'
 
-- upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-  artifact: drop
+  # Environment name
+  environmentName: 'NuxtCMSClient'
 
-- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'Pay-As-You-Go(1ce78759-24c6-47f3-b11e-f1ea12273337)'
-    appType: 'webAppLinux'
-    WebAppName: 'NuxtCMSClient'
-    packageForLinux: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
-    RuntimeStack: 'NODE|14-lts'
-    StartupCommand: 'npm run start'
+  # Agent VM image name
+  vmImageName: 'ubuntu-latest'
+
+stages:
+- stage: Build
+  displayName: Build stage
+  jobs:
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: $(vmImageName)
+
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '14.x'
+      displayName: 'Install Node.js'
+
+    - script: |
+        npm install
+        npm run build
+      displayName: 'npm install and build'
+
+    - task: ArchiveFiles@2
+      displayName: 'Archive files'
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+        includeRootFolder: false
+        archiveType: zip
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+        replaceExistingArchive: true
+
+    - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      artifact: drop
+
+- stage: Deploy
+  displayName: Deploy stage
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: Deploy
+    displayName: Deploy
+    environment: $(environmentName)
+    pool:
+      vmImage: $(vmImageName)
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: AzureWebApp@1
+            displayName: 'Azure Web App Deploy: NuxtCMSClient'
+            inputs:
+              # azureSubscription: $(azureSubscription)
+              azureSubscription: 'Pay-As-You-Go(1ce78759-24c6-47f3-b11e-f1ea12273337)'
+              appType: webAppLinux
+              appName: 'NuxtCMSClient'
+              runtimeStack: 'NODE|14.x'
+              package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+              startUpCommand: 'npm run start'
