--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,6 @@ stages:
     - task: AzureWebAppContainer@1
       displayName: 'Azure Web App on Container Deploy'
       inputs:
-        azureSubscription: $(azureSubscription)
-        appName: $(appName)
+        azureSubscription: 3f1d8a91-940f-4c9d-b8d7-b146893bbd27
+        appName: nubxt-app-2
         containers: $(containerRegistry)/$(imageRepository):$(tag)      
